<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Update Setting</string>
    <string name="action_settings">Settings</string>
    <string name="asternmute">Mute Audio when in Reverse</string>
    <string name="lightstate">Car Light Backlight :</string>
    <string name="rearview_camera">Switch to Rear Camera when in Reverse</string>
    <string name="auto_volume">Car Auto Volume :</string>
    <string name="sysversion">System Version: </string>
    <string name="mcuversion">MCU Version: </string>
    <string name="androidversion">Android Version: </string>
    <string name="check_update">Check Now</string>
    <string name="mcu_diatext">MCU upgrade files found</string>
    <string name="notice">Tip: Please allow the update to complete before attempting to use other apps.</string>
    <string name="version">Version Information</string>
    <string name="update">MCU Update</string>
    <string name="btupdate">BT Update</string>
    <string name="config">Vehicle Configuration</string>
    <string name="version_same">File version is the same as the system version</string>
    <string name="update_fail">Update Failed!!!</string>
    <string name="wipe_fail">Wipe Failed!!!</string>
    <string name="progress">MCU Update Progress</string>
    <string name="btprogress">BT Update Progress</string>
    <string name="btloadfile">BT Load ..........</string>
    <string name="btunzip">decompressing files</string>
    <string name="found">Found Update File</string>
    <string name="not_found">Update File Not Found</string>
    <string name="update_ok">Update Success</string>
    <string name="update_ok_msg">MCU update completed, rebooting unit</string>
    <string name="msg_1"> </string>
    <string name="list_version">Box Version</string>
    <string name="list_capabilities">Capabilities</string>
    <string name="list_update">MCU Update</string>
    <string name="list_config">Car Config</string>
    <string name="list_serial_config">Serial Config</string>
    <string name="list_car_config">Car Type</string>
    <string name="list_btupdate">BT Update</string>
    <string name="list_keysbacklight">Backlight Keys</string>
    <string name="serial_label_OBD">OBD</string>
    <string name="serial_label_CAN">CAN Decoding Box</string>
    <string name="serial_label_Non">Non</string>
    <string name="car_of_Volkswagen">Volkswagen</string>
    <string name="car_of_Sonata8">Sonata-8</string>
    <string name="car_of_Other">Other</string>
    <string name="seekbar_value_max">255</string>
    <string name="seekbar_value_min">0</string>
    <string name="button_ok">OK</string>
    <string name="list_otg">OTG Model</string>
    <string name="otg_of_host">Connected devices</string>
    <string name="otg_of_slave">Connected PC</string>
    <string name="list_standby">Standby Time</string>
    <string name="standby_half_hour">Half Hour</string>
    <string name="standby_one_hour">One Hour</string>
    <string name="standby_two_hour">Two Hour</string>
    <string name="standby_half_day">Half Day</string>
    <string name="standby_one_day">One Day</string>
    <string name="standby_no_standby">Instant Off</string>
    <string name="standby_two_day">Two Days</string>
    <string name="standby_infinite">Always On</string>
    <string name="standby_switch_on">ON</string>
    <string name="standby_switch_off">OFF</string>
    <string name="list_connectedstandby">Connected Standby Time</string>
    <string name="connectedstandby_description">When going to standby, activate airplane mode:</string>
    <string name="connectedstandby_off">Straight Away</string>
    <string name="connectedstandby_ten_minutes">After Ten Minutes</string>
    <string name="connectedstandby_one_hour">After One Hour</string>
    <string name="connectedstandby_four_hours">After Four Hours</string>
    <string name="connectedstandby_half_day">After Twelve Hours</string>
    <string name="connectedstandby_one_day">After One Day</string>
    <string name="connectedstandby_infinite">Never</string>
    <!-- Capabilities -->
    <string name="choose_capabilities">Choose Capabilities</string>
    <string name="capability_preset">Preset:</string>
    <string name="preset_nu_series">NU Series (Carpad II)</string>
    <string name="preset_nr_series">NR Series (Carpad III)</string>
    <string name="preset_custom">Custom (Advanced)</string>
    <string name="all_capabilities">All Capabilities</string>
    <string name="cap_backlight_keys_custom_color">Edit keys backlight color</string>
    <string name="cap_backlight_keys_brightness">Edit keys backlight brightness</string>
</resources>
